--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* .background{
+.background{
+  background-image: url('../public/images/background.webp');
+}
+/* .contact{
   background-image: url('../public/images/background.jpeg');
 } */
